kyverno-cluster-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-signed-images
spec:
  validationFailureAction: Enforce
  background: false
  webhookTimeoutSeconds: 30
  failurePolicy: Fail
  rules:
    - name: check-image-signature
      match:
        any:
        - resources:
            kinds:
              - Pod
      verifyImages:
      - image: "10.210.60.130:5000:*"
        key: |-
          -----BEGIN PUBLIC KEY-----
          MIIBojANBgkqhkiG9w0BAQEFAAOCAY8AMIIBigKCAYEA2bPUKOUTeP21ktIxURXB
[...]
          30cyLzaQ5Oy4G3XZciIbPhC8VI4K+N/vQT8CCmD/Fwa3AgMBAAE=
          -----END PUBLIC KEY-----
