policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: container-image-policy
spec:
  validationFailureAction: Enforce
  background: false
  webhookTimeoutSeconds: 30
  failurePolicy: Fail
  rules:
  - name: container-registry-required
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "Image must be from Zubin container registry"
      pattern:
        spec:
          containers:
          - image: "10.210.60.130:5000*"
  - name: verify-image-signature
    match:
      resources:
        kinds:
        - Pod
    verifyImages:
    - imageReferences:
      - "10.210.60.130:5000*"
      attestors:
      - count: 1
        entries:
          - keys:
              publicKeys: |-
                -----BEGIN PUBLIC KEY-----
                MIIBojANBgkqhkiG9w0BAQEFAAOCAY8AMIIBigKCAYEA2bPUKOUTeP21ktIxURXB
[...]
                30cyLzaQ5Oy4G3XZciIbPhC8VI4K+N/vQT8CCmD/Fwa3AgMBAAE=
                -----END PUBLIC KEY-----              
              rekor:
                ignoreTlog: true
                url: https://rekor.sigstore.dev
